--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,18 @@
 \documentclass{hitchhiker's-guide}
 \usepackage{hitchhiker's-guide}
 
-\thetitle{PLACEHOLDER} % Title as it appears in the header.
+\thetitle{Template} % Title as it appears in the header.
 
 %Temporary Packages
 \usepackage{lipsum}
-\usepackage{blindtext}
 
-%\addbibresource{references.bib}
+
+% \addbibresource{references.bib} %update as necessary
 \begin{document}
 \input{modules/titlepage}
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
 \input{chapters/PLACEHOLDER.tex}
-%\printbibliography
+% \printbibliography %uncomment when needed
 \printindex
 \end{document}
