--- a/modules/titlepage.tex
+++ b/modules/titlepage.tex
@@ -5,7 +5,7 @@
 
     \centering
     % Title
-    {\Huge \bfseries [PLACEHOLDER]\titlepagebreak [PLACEHOLDER]}\\[1in]
+    {\Huge \bfseries Hitchhiker's Guide\titlepagebreak Template}\\[1in]
     
     % Course Code
     {\Large GENXXXX}\\[0.75in]
@@ -23,7 +23,7 @@
     {\large \today}\\[0.5cm]
     
     % Version Number
-    {\large Version: 0.1.0}
+    {\large Version: 1.0.0}
 
     \vspace*{\fill} % Push everything up to center vertically
 \end{titlepage}
