--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,9 @@
 \documentclass{hitchhiker's-guide}
 \usepackage{hitchhiker's-guide}
 
-\thetitle{Template} % Title as it appears in the header.
+\thetitle{Probability and Optimization} % Title as it appears in the header.
 
-%Temporary Packages
-\usepackage{lipsum}
+
 
 
 % \addbibresource{references.bib} %update as necessary
@@ -12,7 +11,7 @@
 \input{modules/titlepage}
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
-\input{chapters/PLACEHOLDER.tex}
+\input{chapters/permutation_and_combination.tex}
 % \printbibliography %uncomment when needed
 \printindex
 \end{document}
