--- a/modules/abstract_and_grading.tex
+++ b/modules/abstract_and_grading.tex
@@ -1,4 +1,38 @@
-
 \section*{Abstract}
 
-\lipsum[1-2]
+This course covers probability and optimization from a practical lens. We will first cover the basics of counting, before moving on the probability, where we will learn varied topics such as Bayes' Theorem and Random variables. Finally, we will move on to optimization, which covers some of the most common algorithms and methods for function optimization.
+
+\section*{Syllabus\footnote{This syllabus needs to be updated as it only adds up to 30 hours of course material}} 
+
+\begin{enumerate} 
+    \item \textbf{Permutation and Combination \hfill 8 Hours} 
+    \begin{enumerate}
+        \item Basic Methods
+        \item Generating Functions
+        \item Distributions
+        \item Partition and Composition
+    \end{enumerate}
+    \item \textbf{Probability \hfill 15 Hours}
+    \begin{enumerate}
+        \item Bayes' Theorem \hfill 4 Hours
+        \item Random Variables \hfill 5 Hours
+        \item Distributions and Functions of Random Variables \hfill 6 Hours
+    \end{enumerate}
+    \item \textbf{Optimization \hfill 7 Hours }
+    \begin{enumerate}
+        \item Vector Valued Functions \hfill 3 Hours
+        \item Back Propagation \hfill 4 Hours
+    \end{enumerate}
+\end{enumerate}
+
+\section*{Grading\footnote{More details need to be added for grading.}}
+
+\subsection*{Internal Assessment \hfill  50 Marks}
+\begin{enumerate}
+    \item Quiz/Assignment \hfill 5 Marks
+    \item Quiz/Assignment \hfill 5 Marks
+    \item Quiz/Assignment \hfill 5 Marks
+    \item Quiz/Assignment \hfill 5 Marks
+    \item Mid Semester Examination \hfill 30 Marks
+\end{enumerate}
+\subsection*{External Assessment \hfill  50 Marks}
