--- a/hitchhiker's-guide.sty
+++ b/hitchhiker's-guide.sty
@@ -48,6 +48,6 @@
 \newtheorem{intuition}{Intuition}[chapter]
 \newtheorem{wormhole}{Wormhole}[chapter]
 \newtheorem{fallacy}{Fallacy}[chapter]
-\newtheorem{exampleinner}{Example}[chapter]
+\newtheorem{example}{Example}[chapter]
 
 
