--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,14 @@
 \documentclass{hitchhiker's-guide}
 \usepackage{hitchhiker's-guide}
 
-\thetitle{Template} % Title as it appears in the header.
-
-%Temporary Packages
-\usepackage{lipsum}
+\thetitle{Operating Systems} % Title as it appears in the header.
 
 
 % \addbibresource{references.bib} %update as necessary
 \begin{document}
 \input{modules/titlepage}
 \input{modules/abstract_and_grading.tex}
-\tableofcontents
-\input{chapters/PLACEHOLDER.tex}
+% \tableofcontents
 % \printbibliography %uncomment when needed
 \printindex
 \end{document}
