--- a/modules/abstract_and_grading.tex
+++ b/modules/abstract_and_grading.tex
@@ -1,4 +1,42 @@
-
 \section*{Abstract}
+Operating Systems is a three credit subject that covers how operating systems are designed. It is a theory-oriented subject, that delves into OS structure, process scheduling and memory management. It also contains some numericals, although they are sparse. Some case studies will also be covered, focusing in practical applications of the subject.
 
-\lipsum[1-2]
+\section*{Syllabus}
+The subject is broken into 4 modules. The first three modules are scheduled for 10 hours each, with the last module covering the last 6 hours.
+\begin{enumerate}
+    \item Module 1 \hfill 10 Hours 
+    \begin{enumerate}
+        \item Introduction
+        \item Operating System Structure
+        \item Process Concept
+        \item Threads
+    \end{enumerate}
+    \item Module 2 \hfill 10 Hours
+    \begin{enumerate}
+        \item Process Scheduling
+        \item Synchronisation
+        \item Deadlocks
+    \end{enumerate}
+    \item Module 3 \hfill 10 Hours
+    \begin{enumerate}
+        \item Memory Management
+    \end{enumerate}
+    \item Module 4 \hfill 6 Hours
+    \begin{enumerate}
+        \item Implementing File Systems
+        \item System Protection
+    \end{enumerate}
+\end{enumerate}
+
+There will also be a self-directed learning component for the course, which will be assessed in both Internal as well as External Assessments. This is expected to be a Coursera Course, although no specific details have been released yet.
+
+\section*{Grading}
+\subsection*{Internal Assessment \hfill 50 Marks}
+\begin{enumerate}
+    \item Quiz \hfill 5 Marks
+    \item Quiz \hfill 5 Marks
+    \item Quiz \hfill 5 Marks
+    \item Assignment \hfill 5 Marks
+    \item Mid Semester Examination \hfill 30 Marks
+\end{enumerate}
+\subsection*{End Semester Assessment \hfill 50 Marks}
