--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \usepackage{hitchhiker's-guide}
 
 \thetitle{Template} % Title as it appears in the header.
-
+\newcommand{\versionNumber}{v1.0.3}
 %Temporary Packages
 \usepackage{lipsum}
 
