--- a/modules/titlepage.tex
+++ b/modules/titlepage.tex
@@ -23,7 +23,7 @@
     {\large \today}\\[0.5cm]
     
     % Version Number
-    {\large Version: 1.0.2}
+    {\large Version: \versionNumber}
 
     \vspace*{\fill} % Push everything up to center vertically
 \end{titlepage}
