--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,8 @@
 \documentclass{hitchhiker's-guide}
-\usepackage{hitchhiker's-guide}
 
 \thetitle{Template} % Title as it appears in the header.
-\newcommand{\versionNumber}{v1.0.3}
+\newcommand{\versionNumber}{1.1.0} % Version number as it appears on the titlepage.
+
 %Temporary Packages
 \usepackage{lipsum}
 
