--- a/hitchhiker's-guide.cls
+++ b/hitchhiker's-guide.cls
@@ -1,63 +1,85 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{hitchhiker's-guide}[2025/01/03 Custom Book Class]
+\ProvidesClass{hitchhiker's-guide}[v1.1.0]
 
-% Base class
-\LoadClass{book}
+% ================================
+% Base Class
+% ================================
+\LoadClass{book} % This class builds on the "book" document class.
 
-% Required Packages
-\RequirePackage[english]{babel}
-\RequirePackage{csquotes}
+% ================================
+% Required Language Packages
+% ================================
+\RequirePackage[english]{babel} % English language support.
+\RequirePackage{csquotes} % Context-sensitive quotation marks.
 
-% Geometry and Margins
-\RequirePackage[a4paper, inner=0.6in, outer=1.8in, top=1in, bottom=1in, bindingoffset=0.75in, marginparwidth=1.4in, marginparsep=0.2in]{geometry}
+% ================================
+% Page Layout and Margins
+% ================================
+\RequirePackage[a4paper,
+    inner=0.6in,
+    outer=1.8in,
+    top=1in,
+    bottom=1in,
+    bindingoffset=0.75in,
+    marginparwidth=1.4in,
+    marginparsep=0.2in]{geometry}
 
-% Annotations
-\RequirePackage{marginnote}
+% ================================
+% Paragraph Formatting
+% ================================
+\RequirePackage{ragged2e} % Left-align text (ragged-right).
+\RaggedRight % Enforce ragged-right alignment globally.
+\hfuzz=5pt % Avoid underfull/overfull hbox warnings.
+\RequirePackage{enumitem} % Customization of lists.
+\RequirePackage[skip=0.2in, indent=0.5in]{parskip} % Paragraph spacing.
 
-% Header and Footer
-\RequirePackage{fancyhdr}
-\pagestyle{fancy}
-\fancyhead[LE]{\thepage}
-\fancyhead[RE]{\guidetitle}
-\fancyhead[LO]{\leftmark}
-\fancyhead[RO]{\thepage}
-\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
-\fancyfoot{}
-\renewcommand{\footrulewidth}{0pt}
+% ================================
+% Annotations (e.g., Margin Notes)
+% ================================
+\RequirePackage{marginnote} % For margin notes.
+\renewcommand\marginfont{\normalfont\scriptsize} % Font for margin notes.
 
+% ================================
+% Lists Configuration
+% ================================
+\setlist[itemize]{itemsep=0.25\parskip, parsep=0pt} % Itemize settings.
+\setlist[enumerate]{itemsep=0.35\parskip, parsep=0pt} % Enumerate settings.
+
+% ================================
 % Indexing
-\RequirePackage{makeidx}
-\makeindex
+% ================================
+\RequirePackage{makeidx} % Index creation package.
+\makeindex % Enable indexing.
 
-% Paragraphs and Listings
-\RequirePackage{ragged2e}
-\RequirePackage{enumitem}
-\setlist[itemize]{itemsep=0.25\parskip, parsep=0pt}
-\setlist[enumerate]{itemsep=0.35\parskip, parsep=0pt}
-\RequirePackage[skip=0.2in, indent=0.5in]{parskip}
+% ================================
+% Mathematics
+% ================================
+\RequirePackage{amsmath, amssymb, amsfonts, amsthm} % Standard AMS packages for math.
+\usepackage{cancel} % Strike-through for mathematical terms.
 
-% Custom Commands
-\RequirePackage{xparse}
+% ================================
+% Graphics and Figures
+% ================================
+\RequirePackage{tikz} % Drawing and illustrations.
 
-\NewDocumentCommand{\labelandindex}{m o}{%
-  \IfValueTF{#2}{%
-    \label{#2} \index{#1}%
-  }{%
-    \label{#1} \index{#1}%
-  }%
-}
+% ================================
+% Trees
+% ================================
+\usepackage{qtree} % Typesetting simple trees.
 
-\newcommand{\thetitle}[1]{\def\guidetitle{#1}}
+% ================================
+% Bibliography
+% ================================
+\RequirePackage[backend=biber]{biblatex} % Biber backend for bibliography.
 
-
-% Load your custom package
-\RequirePackage{hitchhiker's-guide}
-
-% Math and Equations
-\RequirePackage{amsmath, amssymb, amsfonts, amsthm}
-
-% References
-\RequirePackage[backend=biber]{biblatex}
-
+% ================================
 % Tables
-\RequirePackage{tabularx}
+% ================================
+\RequirePackage{tabularx} % Automatic width adjustment for tables.
+\usepackage{booktabs} % Professional-quality tables.
+\usepackage{array} % Extended table formatting.
+
+% ================================
+% Load Custom Style Package
+% ================================
+\RequirePackage{hitchhiker's-guide} % Load custom style definitions from .sty file.
