--- a/main.tex
+++ b/main.tex
@@ -2,7 +2,7 @@
 \usepackage{hitchhiker's-guide}
 
 \thetitle{Operating Systems} % Title as it appears in the header.
-
+\newcommand{\versionNumber}{0.1.0} 
 
 % \addbibresource{references.bib} %update as necessary
 \begin{document}
