--- a/main.tex
+++ b/main.tex
@@ -1,13 +1,13 @@
 \documentclass{hitchhiker's-guide}
 
 \thetitle{Probability and Optimization} % Title as it appears in the header.
-\newcommand{\versionNumber}{0.1.0}
+\newcommand{\versionNumber}{1.0.0}
 
 % Custom Commands for this guide
 \newcommand*{\Perm}[2]{{}^{#1}\!P_{#2}}
 \newcommand*{\Comb}[2]{{}^{#1}C_{#2}}
 \usepackage{mathtools}
-\newtheorem{case study}{Case Study}[chapter]
+\newtheorem{case_study}{Case Study}[chapter]
 % \addbibresource{references.bib} %update as necessary
 \begin{document}
 \input{modules/titlepage}
