--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,8 @@
 \input{modules/titlepage}
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
-\input{chapters/permutation_and_combination.tex}
+% \input{chapters/permutation_and_combination.tex}
+\input{chapters/generating_functions.tex}
 % \printbibliography %uncomment when needed
 \printindex
 \end{document}
