--- a/hitchhiker's-guide.sty
+++ b/hitchhiker's-guide.sty
@@ -83,3 +83,4 @@
 \newtheorem{wormhole}{Wormhole}[chapter]
 \newtheorem{fallacy}{Fallacy}[chapter]
 \newtheorem{example}{Example}[chapter]
+\newtheorem{case_study}{Case Study}[chapter]
