--- a/hitchhiker's-guide.cls
+++ b/hitchhiker's-guide.cls
@@ -1,5 +1,5 @@
 \NeedsTeXFormat{LaTeX2e}
-\ProvidesClass{hitchhiker's-guide}[v1.1.0]
+\ProvidesClass{hitchhiker's-guide}
 
 % ================================
 % Base Class
@@ -31,7 +31,7 @@
 \RaggedRight % Enforce ragged-right alignment globally.
 \hfuzz=5pt % Avoid underfull/overfull hbox warnings.
 \RequirePackage{enumitem} % Customization of lists.
-\RequirePackage[skip=0.2in, indent=0.5in]{parskip} % Paragraph spacing.
+\RequirePackage[skip=0.2in, indent=0in]{parskip} % Paragraph spacing.
 
 % ================================
 % Annotations (e.g., Margin Notes)
@@ -43,7 +43,7 @@
 % Lists Configuration
 % ================================
 \setlist[itemize]{itemsep=0.25\parskip, parsep=0pt} % Itemize settings.
-\setlist[enumerate]{itemsep=0.35\parskip, parsep=0pt} % Enumerate settings.
+\setlist[enumerate]{itemsep=0.25\parskip, parsep=0pt} % Enumerate settings.
 
 % ================================
 % Indexing
@@ -66,7 +66,7 @@
 % ================================
 % Trees
 % ================================
-\usepackage{qtree} % Typesetting simple trees.
+\RequirePackage{qtree} % Typesetting simple trees.
 
 % ================================
 % Bibliography
@@ -77,10 +77,98 @@
 % Tables
 % ================================
 \RequirePackage{tabularx} % Automatic width adjustment for tables.
-\usepackage{booktabs} % Professional-quality tables.
-\usepackage{array} % Extended table formatting.
+\RequirePackage{booktabs} % Professional-quality tables.
+\RequirePackage{array} % Extended table formatting.
+\RequirePackage{longtable}  % Tables that span multiple pages
+\RequirePackage{colortbl}   % Add colors to tables
 
 % ================================
-% Load Custom Style Package
+% Looks
 % ================================
-\RequirePackage{hitchhiker's-guide} % Load custom style definitions from .sty file.
+\RequirePackage{darkmode} % Darkmode
+
+% ================================
+% Custom Commands
+% ================================
+% Label and index a section simultaneously.
+\NewDocumentCommand{\labelandindex}{m o}{%
+  \IfValueTF{#2}{%
+    \label{#2} \index{#1}%
+  }{%
+    \label{#1} \index{#1}%
+  }%
+}
+
+% Define the title of the guide.
+\newcommand{\thetitle}[1]{\def\guidetitle{#1}}
+
+% ================================
+% Header and Footer Configuration
+% ================================
+\RequirePackage{fancyhdr} % Enhanced headers and footers.
+\pagestyle{fancy}
+\fancyhead[LE]{\thepage} % Left-even: Page number.
+\fancyhead[RE]{\guidetitle} % Right-even: Guide title.
+\fancyhead[LO]{\leftmark} % Left-odd: Chapter title.
+\fancyhead[RO]{\thepage} % Right-odd: Page number.
+\fancyfoot{} % No footer content.
+\renewcommand{\footrulewidth}{0pt} % Disable footer rule.
+
+% Update chapter mark for fancyhdr.
+\renewcommand{\chaptermark}[1]{\markboth{#1}{}}
+
+% ================================
+% Abstract Environment
+% ================================
+\newenvironment{abstract}
+    {\section*{Abstract}\itshape}
+    {\par}
+
+% ================================
+% Code Listings
+% ================================
+\RequirePackage{xcolor} % Color definitions.
+\definecolor{lightgray}{rgb}{0.9, 0.9, 0.9} % Light gray background for code.
+\RequirePackage{minted} % Syntax-highlighted code listings.
+\setminted{
+    bgcolor=lightgray,
+    fontsize=\small,
+    frame=single,
+    linenos=true,
+    numbersep=5pt,
+    breaklines=true,
+    mathescape=true,
+    texcl=true
+}
+
+% ================================
+% Custom Theorem Style
+% ================================
+
+\newtheoremstyle{customstyle} % Unified style for theorems and environments.
+{10pt}   % Space above.
+{10pt}   % Space below.
+{\normalfont} % Body font.
+{}        % Indentation.
+{\bfseries} % Theorem head font.
+{:}       % Punctuation after theorem head.
+{.5em}    % Space after theorem head.
+{\thmname{#1}\thmnumber{ #2}\thmnote{ (#3)}} % Custom theorem head spec.
+
+% Apply the custom theorem style.
+\theoremstyle{customstyle}
+
+% ================================
+% Custom Environments
+% ================================
+\newtheorem{theorem}{Theorem}[chapter]
+\newtheorem{lemma}[theorem]{Lemma}
+\newtheorem{corollary}[theorem]{Corollary}
+\newtheorem{definition}[theorem]{Definition}
+\newtheorem{remark}[theorem]{Remark}
+\newtheorem{intuition}[theorem]{Intuition}
+\newtheorem{wormhole}[theorem]{Wormhole}
+\newtheorem{fallacy}[theorem]{Fallacy}
+\newtheorem{example}[theorem]{Example}
+\newtheorem{case_study}[theorem]{Case Study}
+
