--- a/main.tex
+++ b/main.tex
@@ -1,11 +1,10 @@
 \documentclass{hitchhiker's-guide}
 
 \thetitle{Template} % Title as it appears in the header.
-\newcommand{\versionNumber}{1.2.0} % Version number as it appears on the titlepage.
 
 %Temporary Packages
 \usepackage{lipsum}
-
+\enabledarkmode{}
 
 % \addbibresource{references.bib} %update as necessary
 \begin{document}
