--- a/modules/titlepage.tex
+++ b/modules/titlepage.tex
@@ -5,7 +5,7 @@
 
     \centering
     % Title
-    {\Huge \bfseries Hitchhiker's Guide\titlepagebreak Template}\\[1in]
+    {\Huge \bfseries Hitchhiker's Guide\titlepagebreak{} Template}\\[1in]
     
     % Course Code
     {\Large GENXXXX}\\[0.75in]
@@ -14,17 +14,14 @@
     {\huge Nakul Bhat}\\[0.5in]
     
     % Affiliation
-    {\large Department of Computer Science and Engineering \titlepagebreak Manipal Institute of Technology}\\[0.5in]
+    {\large Department of Computer Science and Engineering \titlepagebreak{} Manipal Institute of Technology}\\[0.5in]
     
     % Contact
-    {\large Email: nakulbhat034@gmail.com \titlepagebreak Phone: +91 8660022842}\\[1.5cm]
+    {\large Email: nakulbhat034@gmail.com \titlepagebreak{} Phone: +91 8660022842}\\[1.5cm]
     
     % Date
     {\large \today}\\[0.5cm]
     
-    % Version Number
-    {\large Version: \versionNumber}
-
     \vspace*{\fill} % Push everything up to center vertically
 \end{titlepage}
-\restoregeometry
+\restoregeometry{}
