--- a/main.tex
+++ b/main.tex
@@ -1,10 +1,9 @@
-\documentclass{hitchhiker's-guide}
+\documentclass{hitchhikers-guide}
 
 \thetitle{Template} % Title as it appears in the header.
-
+\usepackage{bookmark}
 %Temporary Packages
 \usepackage{lipsum}
-\enabledarkmode{}
 
 % \addbibresource{references.bib} %update as necessary
 \begin{document}
@@ -12,6 +11,6 @@
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
 \input{chapters/PLACEHOLDER.tex}
-% \printbibliography %uncomment when needed
+%\printbibliography %uncomment when needed
 \printindex
 \end{document}
