Update to Template v3.0.0

--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,6 @@
-\documentclass{hitchhiker's-guide}
-\usepackage{hitchhiker's-guide}
+\documentclass{hitchhikers-guide}
 
 \thetitle{Operating Systems} % Title as it appears in the header.
-\newcommand{\versionNumber}{0.1.0} 
 
 % \addbibresource{references.bib} %update as necessary
 \begin{document}
