Update to Template v3.1.0

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass{hitchhikers-guide}
+\documentclass[light]{hitchhikers-guide}
 
 \thetitle{Probability and Optimization} % Title as it appears in the header.
 \newcommand{\versionNumber}{1.0.0}
@@ -12,7 +12,7 @@
 \input{modules/titlepage}
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
-%\input{chapters/permutation_and_combination.tex}
+\input{chapters/permutation_and_combination.tex}
 \input{chapters/generating_functions.tex}
 % \printbibliography %uncomment when needed
 \printindex
