--- a/modules/abstract_and_grading.tex
+++ b/modules/abstract_and_grading.tex
@@ -1,4 +1,41 @@
 
 \section*{Abstract}
+This course will serve as an introduction to algorithms and their workings. We will cover the different types of asymptotic notations, some widely used algorithm design techniques and analyse their efficiency.
 
-\lipsum[1-2]
+\section*{Syllabus}
+
+\begin{enumerate}
+    \item \textbf{Module 1 \hfill{} 8 Hours}
+    \begin{itemize} [label=]
+        \item Introduction
+        \item Fundamentals of Analysis of Algorithmic Efficiency
+    \end{itemize}
+    
+    \item \textbf{Module 2 \hfill{} 10 Hours}
+    \begin{itemize}[label=]
+        \item Brute Force Techniques
+        \item Decrease and Conquer
+    \end{itemize}
+
+    \item \textbf{Module 3 \hfill{} 10 Hours}
+    \begin{itemize}[label=]
+        \item Divide and Conquer
+        \item Transform and Conquer
+    \end{itemize}
+
+    \item \textbf{Module 4\hfill{} 10 Hours}
+    \begin{itemize}[label=]
+        \item Space and Time Tradeoffs
+        \item Dynamic Programming
+    \end{itemize}
+
+    
+    \item \textbf{Module 5 \hfill{} 10 Hours}
+    \begin{itemize}[label=]
+        \item Greedy Techniques
+        \item Limitations of Algorithmic Power
+    \end{itemize}
+
+
+\end{enumerate}
+
