--- a/modules/titlepage.tex
+++ b/modules/titlepage.tex
@@ -5,10 +5,10 @@
 
     \centering
     % Title
-    {\Huge \bfseries Hitchhiker's Guide\titlepagebreak{} Template}\\[1in]
+    {\Huge \bfseries The Hitchhiker's Guide to\titlepagebreak{} Design and Analysis of \titlepagebreak{} Algorithms}\\[1in]
     
     % Course Code
-    {\Large GENXXXX}\\[0.75in]
+    {\Large CSE 2222}\\[0.75in]
     
     % Author
     {\huge Nakul Bhat}\\[0.5in]
