--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass{hitchhikers-guide}
 
-\thetitle{Template} % Title as it appears in the header.
+\thetitle{Design and Analysis of Algorithms} % Title as it appears in the header.
 %Temporary Packages
 \usepackage{lipsum}
 
@@ -9,6 +9,6 @@
 \input{modules/titlepage}
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
+\input{chapters/algorithmic_efficiency.tex}
 %\printbibliography %uncomment when needed
-\printindex
 \end{document}
