--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,7 @@
-\documentclass{hitchhikers-guide}
+\documentclass[dark]{hitchhikers-guide}
 
 \thetitle{Design and Analysis of Algorithms} % Title as it appears in the header.
 %Temporary Packages
-\usepackage{lipsum}
 
 % \addbibresource{references.bib} %update as necessary
 \begin{document}
@@ -10,5 +9,6 @@
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
 \input{chapters/algorithmic_efficiency.tex}
+\input{chapters/brute_force_techniques.tex}
 %\printbibliography %uncomment when needed
 \end{document}
