--- a/main.tex
+++ b/main.tex
@@ -9,7 +9,8 @@
 \input{modules/titlepage}
 \input{modules/abstract_and_grading.tex}
 \tableofcontents
-\input{chapters/PLACEHOLDER.tex}
+\input{chapters/basic_sql.tex}
+\input{chapters/intermediate_advanced_sql.tex}
 %\printbibliography %uncomment when needed
 \printindex
 \end{document}
